SynAnalyzer/PA3/cool.output
Terminals unused in grammar

    ERROR


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' features_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' features_list '}' ';'
    6      | CLASS TYPEID '{' error '}' ';'
    7      | CLASS error '{' features_list '}' ';'
    8      | CLASS error '{' error '}' ';'

    9 features_list: features
   10              | ε

   11 features: feature ';'
   12         | features feature ';'
   13         | error ';'

   14 feature: OBJECTID '(' formals ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID ':' TYPEID
   16        | OBJECTID ':' TYPEID ASSIGN expr

   17 formals: formal
   18        | formals ',' formal
   19        | ε

   20 formal: OBJECTID ':' TYPEID

   21 expr: OBJECTID ASSIGN expr
   22     | expr '.' OBJECTID '(' param_expr ')'
   23     | expr '@' TYPEID '.' OBJECTID '(' param_expr ')'
   24     | OBJECTID '(' param_expr ')'
   25     | IF expr THEN expr ELSE expr FI
   26     | WHILE expr LOOP expr POOL
   27     | '{' expr_list '}'
   28     | LET let_expr
   29     | CASE expr OF case_branch_list ESAC
   30     | NEW TYPEID
   31     | ISVOID expr
   32     | expr '+' expr
   33     | expr '-' expr
   34     | expr '*' expr
   35     | expr '/' expr
   36     | '~' expr
   37     | expr '<' expr
   38     | expr LE expr
   39     | expr '=' expr
   40     | NOT expr
   41     | '(' expr ')'
   42     | OBJECTID
   43     | INT_CONST
   44     | STR_CONST
   45     | BOOL_CONST

   46 let_expr: OBJECTID ':' TYPEID in_let
   47         | OBJECTID ':' TYPEID ASSIGN expr in_let
   48         | OBJECTID ':' TYPEID ',' let_expr
   49         | OBJECTID ':' TYPEID ASSIGN expr ',' let_expr
   50         | error in_let
   51         | error ',' let_expr

   52 in_let: IN expr

   53 expr_list: expr ';'
   54          | expr_list expr ';'
   55          | error ';'

   56 param_expr: expr
   57           | param_expr ',' expr
   58           | ε

   59 case_branch_list: case_branch
   60                 | case_branch_list case_branch

   61 case_branch: OBJECTID ':' TYPEID DARROW expr ';'


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 14 22 23 24 41
    ')' (41) 14 22 23 24 41
    '*' (42) 34
    '+' (43) 32
    ',' (44) 18 48 49 51 57
    '-' (45) 33
    '.' (46) 22 23
    '/' (47) 35
    ':' (58) 14 15 16 20 46 47 48 49 61
    ';' (59) 4 5 6 7 8 11 12 13 53 54 55 61
    '<' (60) 37
    '=' (61) 39
    '@' (64) 23
    '{' (123) 4 5 6 7 8 14 27
    '}' (125) 4 5 6 7 8 14 27
    '~' (126) 36
    error (256) 6 7 8 13 50 51 55
    CLASS (258) 4 5 6 7 8
    ELSE (259) 25
    FI (260) 25
    IF (261) 25
    IN (262) 52
    INHERITS (263) 5
    LET (264) 28
    LOOP (265) 26
    POOL (266) 26
    THEN (267) 25
    WHILE (268) 26
    CASE (269) 29
    ESAC (270) 29
    OF (271) 29
    DARROW (272) 61
    NEW (273) 30
    ISVOID (274) 31
    STR_CONST <symbol> (275) 44
    INT_CONST <symbol> (276) 43
    BOOL_CONST <boolean> (277) 45
    TYPEID <symbol> (278) 4 5 6 14 15 16 20 23 30 46 47 48 49 61
    OBJECTID <symbol> (279) 14 15 16 20 21 22 23 24 42 46 47 48 49 61
    ASSIGN (280) 16 21 47 49
    NOT (281) 40
    LE (282) 38
    ERROR (283)


Nonterminals, with rules where they appear

    $accept (45)
        on left: 0
    program <program> (46)
        on left: 1
        on right: 0
    class_list <classes> (47)
        on left: 2 3
        on right: 1 3
    class <class_> (48)
        on left: 4 5 6 7 8
        on right: 2 3
    features_list <features> (49)
        on left: 9 10
        on right: 4 5 7
    features <features> (50)
        on left: 11 12 13
        on right: 9 12
    feature <feature> (51)
        on left: 14 15 16
        on right: 11 12
    formals <formals> (52)
        on left: 17 18 19
        on right: 14 18
    formal <formal> (53)
        on left: 20
        on right: 17 18
    expr <expression> (54)
        on left: 21 22 23 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45
        on right: 14 16 21 22 23 25 26 29 31 32 33 34 35 36 37 38 39 40 41 47 49 52 53 54 56 57 61
    let_expr <expression> (55)
        on left: 46 47 48 49 50 51
        on right: 28 48 49 51
    in_let <expression> (56)
        on left: 52
        on right: 46 47 50
    expr_list <expressions> (57)
        on left: 53 54 55
        on right: 27 54
    param_expr <expressions> (58)
        on left: 56 57 58
        on right: 22 23 24 57
    case_branch_list <cases> (59)
        on left: 59 60
        on right: 29 60
    case_branch <case_> (60)
        on left: 61
        on right: 59 60


State 0

    0 $accept: • program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


State 1

    4 class: CLASS • TYPEID '{' features_list '}' ';'
    5      | CLASS • TYPEID INHERITS TYPEID '{' features_list '}' ';'
    6      | CLASS • TYPEID '{' error '}' ';'
    7      | CLASS • error '{' features_list '}' ';'
    8      | CLASS • error '{' error '}' ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


State 2

    0 $accept: program • $end

    $end  shift, and go to state 7


State 3

    1 program: class_list •
    3 class_list: class_list • class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


State 4

    2 class_list: class •

    $default  reduce using rule 2 (class_list)


State 5

    7 class: CLASS error • '{' features_list '}' ';'
    8      | CLASS error • '{' error '}' ';'

    '{'  shift, and go to state 9


State 6

    4 class: CLASS TYPEID • '{' features_list '}' ';'
    5      | CLASS TYPEID • INHERITS TYPEID '{' features_list '}' ';'
    6      | CLASS TYPEID • '{' error '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


State 7

    0 $accept: program $end •

    $default  accept


State 8

    3 class_list: class_list class •

    $default  reduce using rule 3 (class_list)


State 9

    7 class: CLASS error '{' • features_list '}' ';'
    8      | CLASS error '{' • error '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 10 (features_list)

    features_list  go to state 14
    features       go to state 15
    feature        go to state 16


State 10

    5 class: CLASS TYPEID INHERITS • TYPEID '{' features_list '}' ';'

    TYPEID  shift, and go to state 17


State 11

    4 class: CLASS TYPEID '{' • features_list '}' ';'
    6      | CLASS TYPEID '{' • error '}' ';'

    error     shift, and go to state 18
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 10 (features_list)

    features_list  go to state 19
    features       go to state 15
    feature        go to state 16


State 12

    8 class: CLASS error '{' error • '}' ';'
   13 features: error • ';'

    '}'  shift, and go to state 20
    ';'  shift, and go to state 21


State 13

   14 feature: OBJECTID • '(' formals ')' ':' TYPEID '{' expr '}'
   15        | OBJECTID • ':' TYPEID
   16        | OBJECTID • ':' TYPEID ASSIGN expr

    '('  shift, and go to state 22
    ':'  shift, and go to state 23


State 14

    7 class: CLASS error '{' features_list • '}' ';'

    '}'  shift, and go to state 24


State 15

    9 features_list: features •
   12 features: features • feature ';'

    OBJECTID  shift, and go to state 13

    $default  reduce using rule 9 (features_list)

    feature  go to state 25


State 16

   11 features: feature • ';'

    ';'  shift, and go to state 26


State 17

    5 class: CLASS TYPEID INHERITS TYPEID • '{' features_list '}' ';'

    '{'  shift, and go to state 27


State 18

    6 class: CLASS TYPEID '{' error • '}' ';'
   13 features: error • ';'

    '}'  shift, and go to state 28
    ';'  shift, and go to state 21


State 19

    4 class: CLASS TYPEID '{' features_list • '}' ';'

    '}'  shift, and go to state 29


State 20

    8 class: CLASS error '{' error '}' • ';'

    ';'  shift, and go to state 30


State 21

   13 features: error ';' •

    $default  reduce using rule 13 (features)


State 22

   14 feature: OBJECTID '(' • formals ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 31

    $default  reduce using rule 19 (formals)

    formals  go to state 32
    formal   go to state 33


State 23

   15 feature: OBJECTID ':' • TYPEID
   16        | OBJECTID ':' • TYPEID ASSIGN expr

    TYPEID  shift, and go to state 34


State 24

    7 class: CLASS error '{' features_list '}' • ';'

    ';'  shift, and go to state 35


State 25

   12 features: features feature • ';'

    ';'  shift, and go to state 36


State 26

   11 features: feature ';' •

    $default  reduce using rule 11 (features)


State 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' • features_list '}' ';'

    error     shift, and go to state 37
    OBJECTID  shift, and go to state 13

    '}'  reduce using rule 10 (features_list)

    features_list  go to state 38
    features       go to state 15
    feature        go to state 16


State 28

    6 class: CLASS TYPEID '{' error '}' • ';'

    ';'  shift, and go to state 39


State 29

    4 class: CLASS TYPEID '{' features_list '}' • ';'

    ';'  shift, and go to state 40


State 30

    8 class: CLASS error '{' error '}' ';' •

    $default  reduce using rule 8 (class)


State 31

   20 formal: OBJECTID • ':' TYPEID

    ':'  shift, and go to state 41


State 32

   14 feature: OBJECTID '(' formals • ')' ':' TYPEID '{' expr '}'
   18 formals: formals • ',' formal

    ')'  shift, and go to state 42
    ','  shift, and go to state 43


State 33

   17 formals: formal •

    $default  reduce using rule 17 (formals)


State 34

   15 feature: OBJECTID ':' TYPEID •
   16        | OBJECTID ':' TYPEID • ASSIGN expr

    ASSIGN  shift, and go to state 44

    $default  reduce using rule 15 (feature)


State 35

    7 class: CLASS error '{' features_list '}' ';' •

    $default  reduce using rule 7 (class)


State 36

   12 features: features feature ';' •

    $default  reduce using rule 12 (features)


State 37

   13 features: error • ';'

    ';'  shift, and go to state 21


State 38

    5 class: CLASS TYPEID INHERITS TYPEID '{' features_list • '}' ';'

    '}'  shift, and go to state 45


State 39

    6 class: CLASS TYPEID '{' error '}' ';' •

    $default  reduce using rule 6 (class)


State 40

    4 class: CLASS TYPEID '{' features_list '}' ';' •

    $default  reduce using rule 4 (class)


State 41

   20 formal: OBJECTID ':' • TYPEID

    TYPEID  shift, and go to state 46


State 42

   14 feature: OBJECTID '(' formals ')' • ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 47


State 43

   18 formals: formals ',' • formal

    OBJECTID  shift, and go to state 31

    formal  go to state 48


State 44

   16 feature: OBJECTID ':' TYPEID ASSIGN • expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 63


State 45

    5 class: CLASS TYPEID INHERITS TYPEID '{' features_list '}' • ';'

    ';'  shift, and go to state 64


State 46

   20 formal: OBJECTID ':' TYPEID •

    $default  reduce using rule 20 (formal)


State 47

   14 feature: OBJECTID '(' formals ')' ':' • TYPEID '{' expr '}'

    TYPEID  shift, and go to state 65


State 48

   18 formals: formals ',' formal •

    $default  reduce using rule 18 (formals)


State 49

   25 expr: IF • expr THEN expr ELSE expr FI

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 66


State 50

   28 expr: LET • let_expr

    error     shift, and go to state 67
    OBJECTID  shift, and go to state 68

    let_expr  go to state 69


State 51

   26 expr: WHILE • expr LOOP expr POOL

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 70


State 52

   29 expr: CASE • expr OF case_branch_list ESAC

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 71


State 53

   30 expr: NEW • TYPEID

    TYPEID  shift, and go to state 72


State 54

   31 expr: ISVOID • expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 73


State 55

   44 expr: STR_CONST •

    $default  reduce using rule 44 (expr)


State 56

   43 expr: INT_CONST •

    $default  reduce using rule 43 (expr)


State 57

   45 expr: BOOL_CONST •

    $default  reduce using rule 45 (expr)


State 58

   21 expr: OBJECTID • ASSIGN expr
   24     | OBJECTID • '(' param_expr ')'
   42     | OBJECTID •

    ASSIGN  shift, and go to state 74
    '('     shift, and go to state 75

    $default  reduce using rule 42 (expr)


State 59

   40 expr: NOT • expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 76


State 60

   36 expr: '~' • expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 77


State 61

   27 expr: '{' • expr_list '}'

    error       shift, and go to state 78
    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr       go to state 79
    expr_list  go to state 80


State 62

   41 expr: '(' • expr ')'

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 81


State 63

   16 feature: OBJECTID ':' TYPEID ASSIGN expr •
   22 expr: expr • '.' OBJECTID '(' param_expr ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' param_expr ')'
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • '<' expr
   38     | expr • LE expr
   39     | expr • '=' expr

    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 16 (feature)


State 64

    5 class: CLASS TYPEID INHERITS TYPEID '{' features_list '}' ';' •

    $default  reduce using rule 5 (class)


State 65

   14 feature: OBJECTID '(' formals ')' ':' TYPEID • '{' expr '}'

    '{'  shift, and go to state 91


State 66

   22 expr: expr • '.' OBJECTID '(' param_expr ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' param_expr ')'
   25     | IF expr • THEN expr ELSE expr FI
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • '<' expr
   38     | expr • LE expr
   39     | expr • '=' expr

    THEN  shift, and go to state 92
    LE    shift, and go to state 82
    '<'   shift, and go to state 83
    '='   shift, and go to state 84
    '+'   shift, and go to state 85
    '-'   shift, and go to state 86
    '*'   shift, and go to state 87
    '/'   shift, and go to state 88
    '@'   shift, and go to state 89
    '.'   shift, and go to state 90


State 67

   50 let_expr: error • in_let
   51         | error • ',' let_expr

    IN   shift, and go to state 93
    ','  shift, and go to state 94

    in_let  go to state 95


State 68

   46 let_expr: OBJECTID • ':' TYPEID in_let
   47         | OBJECTID • ':' TYPEID ASSIGN expr in_let
   48         | OBJECTID • ':' TYPEID ',' let_expr
   49         | OBJECTID • ':' TYPEID ASSIGN expr ',' let_expr

    ':'  shift, and go to state 96


State 69

   28 expr: LET let_expr •

    $default  reduce using rule 28 (expr)


State 70

   22 expr: expr • '.' OBJECTID '(' param_expr ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' param_expr ')'
   26     | WHILE expr • LOOP expr POOL
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • '<' expr
   38     | expr • LE expr
   39     | expr • '=' expr

    LOOP  shift, and go to state 97
    LE    shift, and go to state 82
    '<'   shift, and go to state 83
    '='   shift, and go to state 84
    '+'   shift, and go to state 85
    '-'   shift, and go to state 86
    '*'   shift, and go to state 87
    '/'   shift, and go to state 88
    '@'   shift, and go to state 89
    '.'   shift, and go to state 90


State 71

   22 expr: expr • '.' OBJECTID '(' param_expr ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' param_expr ')'
   29     | CASE expr • OF case_branch_list ESAC
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • '<' expr
   38     | expr • LE expr
   39     | expr • '=' expr

    OF   shift, and go to state 98
    LE   shift, and go to state 82
    '<'  shift, and go to state 83
    '='  shift, and go to state 84
    '+'  shift, and go to state 85
    '-'  shift, and go to state 86
    '*'  shift, and go to state 87
    '/'  shift, and go to state 88
    '@'  shift, and go to state 89
    '.'  shift, and go to state 90


State 72

   30 expr: NEW TYPEID •

    $default  reduce using rule 30 (expr)


State 73

   22 expr: expr • '.' OBJECTID '(' param_expr ')'
   23     | expr • '@' TYPEID '.' OBJECTID '(' param_expr ')'
   31     | ISVOID expr •
   32     | expr • '+' expr
   33     | expr • '-' expr
   34     | expr • '*' expr
   35     | expr • '/' expr
   37     | expr • '<' expr
   38     | expr • LE expr
   39     | expr • '=' expr

    '@'  shift, and go to state 89
    '.'  shift, and go to state 90

    $default  reduce using rule 31 (expr)


State 74

   21 expr: OBJECTID ASSIGN • expr

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    expr  go to state 99


State 75

   24 expr: OBJECTID '(' • param_expr ')'

    IF          shift, and go to state 49
    LET         shift, and go to state 50
    WHILE       shift, and go to state 51
    CASE        shift, and go to state 52
    NEW         shift, and go to state 53
    ISVOID      shift, and go to state 54
    STR_CONST   shift, and go to state 55
    INT_CONST   shift, and go to state 56
    BOOL_CONST  shift, and go to state 57
    OBJECTID    shift, and go to state 58
    NOT         shift, and go to state 59
    '~'         shift, and go to state 60
    '{'         shift, and go to state 61
    '('         shift, and go to state 62

    $default  reduce using rule 58 (param_expr)
